update bottle
