# controller/bottle.controller.go
@@ -96,6 +96,7 @@ func (b *BottleController) GetMany(c *gin.Context) {
 
 type CreateBottleRequestBody struct {
 	Title string `json:"title" example:"bottle title (optional)"`
+	Type string `json:"type"`
 	MaturityDate string `json:"maturityDate" example:"date JSON string"`
 }
 // ShowAccount godoc
@@ -125,14 +126,94 @@ func (b *BottleController) Create(c *gin.Context) {
 		httputil.NewError(c, http.StatusBadRequest, err)
 		return
 	}
-
-	bottleId, err := bottleService.Create(body.Title, userId, body.MaturityDate)
+	bottleId, err := bottleService.Create(body.Type, body.Title, userId, body.MaturityDate)
 	if err != nil {
 		httputil.NewError(c, http.StatusBadRequest, err)
 		return
 	}
-
+	
 	c.JSON(200, gin.H{
 		"bottleId": bottleId,
+	})
+}
+
+type GetBottleImgResponse struct {
+	ImgUri string `json:"imgUri" example:"any.img.uri" binding:"require"`
+}
+
+// ShowAccount godoc
+// @Summary      Show an Bottle img
+// @Description  get string by Bottle ID, return bottle img uri
+// @Tags         bottle
+// @Accept       json
+// @Param				 query query GetBottleRequestQuery false "bottle's imgURI"
+// @Success      200  {object}  GetBottleImgResponse
+// @Failure      400  {object}  httputil.HTTPError
+// @Failure      404  {object}  httputil.HTTPError
+// @Failure      500  {object}  httputil.HTTPError
+// @Router       /bottle/img [get]
+// @Security ApiKeyAuth
+func (b *BottleController) GetBottleImg(c *gin.Context) {
+	if _, ok := c.Get("userId"); !ok {
+		httputil.NewError(c, http.StatusBadRequest, errors.New("not authorized"))
+		return	
+	}
+	query := c.Request.URL.Query()
+	bottle, err := bottleService.FindOne(query.Get("bottleId"))
+	
+	if err != nil {
+		httputil.NewError(c, http.StatusNotFound, err)
+		return
+	}
+	c.JSON(200, GetBottleImgResponse{
+		ImgUri: bottle.ImgUri,
+	})
+}
+
+type UpdateBottleStatusRequestBody struct {
+	BottleId string `json:"bottleId"`
+}
+
+type StatusResponse struct { 
+	ImgUri string `json:"imgUri"`
+}
+// ShowAccount godoc
+// @Summary      Update an Bottle isOpen status
+// @Description  Update bottle isOpenStatus by Bottle ID
+// @Tags         bottle
+// @Accept       json
+// @Param				 body body UpdateBottleStatusRequestBody false "bottle Id string"
+// @Success      200  {object}  StatusResponse
+// @Failure      400  {object}  httputil.HTTPError
+// @Failure      404  {object}  httputil.HTTPError
+// @Failure      500  {object}  httputil.HTTPError
+// @Router       /bottle/status [post]
+// @Security ApiKeyAuth
+func (b *BottleController) UpdateBottleStatus(c *gin.Context) {
+	data, ok := c.Get("userId");
+	if  !ok {
+		httputil.NewError(c, http.StatusBadRequest, errors.New("not authorized"))
+		return	
+	}
+	userId := fmt.Sprintf("%v", data)
+	
+	var body UpdateBottleStatusRequestBody
+	
+	if err := c.ShouldBindJSON(&body); err != nil {
+		httputil.NewError(c, http.StatusBadRequest, err)
+		return
+	}
+
+	if err := bottleService.UpdateIsOpen(userId, body.BottleId); err != nil {
+		httputil.NewError(c, http.StatusNotFound, err)
+		return
+	}
+	bottle, err := bottleService.FindOne(body.BottleId)
+	if err != nil {
+		httputil.NewError(c, http.StatusNotFound, err)
+		return
+	}
+	c.JSON(200, StatusResponse{
+		ImgUri: bottle.ImgUri,
 	})
 }
